kustomize/base/deployment.k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: feed-agg
spec:
  replicas: 1
  revisionHistoryLimit: 1
  template:
    spec:
      containers:
        - args:
            - -addr=0.0.0.0:8080
            - -data=/data
          name: feed-agg
          image: docker.seankhliao.com/feed-agg:latest
          ports:
            - name: http
              containerPort: 8080
          volumeMounts:
            - mountPath: /data
              name: data
      enableServiceLinks: false
      serviceAccountName: feed-agg
      terminationGracePeriodSeconds: 10
      volumes:
        - name: data
          emptyDir: {}
